hphp/test/zend/bad/ext/dom/tests/DOMDocumentFragment_construct_basic_002.php
<?php
$fragment = new DOMDocumentFragment();
$fragment->__construct();
var_dump($fragment);
?>
